@@ -8,7 +8,7 @@
 
 Include /etc/gforge/httpd.common
 
-<VirtualHost {ip_address}>
+<VirtualHost {ip_address}:80>
   ServerName {domain_name}
   ServerAlias www.{domain_name}
   ServerAdmin {server_admin}
@@ -38,25 +38,37 @@ Include /etc/gforge/httpd.common
   ErrorDocument 404 /404.php
   LogFormat "%h %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" gforge
   CustomLog "|/usr/sbin/cronolog /var/log/gforge/%Y/%m/%d/gforge.log" gforge
+  # Ensure that we don't try to use SSL on SSL Servers
+  <IfModule apache_ssl.c>
+    SSLDisable
+  </IfModule>
 </VirtualHost>
 
-<VirtualHost {ip_address}>
+<VirtualHost {ip_address}:80>
   ServerName {cvs_host}
   DocumentRoot /usr/lib/gforge/cvs
   ScriptAlias /cgi-bin/ /usr/lib/gforge/cgi-bin/
   Alias /cvstarballs/ /var/lib/gforge/cvstarballs/
   LogFormat "%h %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" gforge
   CustomLog "|/usr/sbin/cronolog /var/log/gforge/%Y/%m/%d/gforge.log" gforge
+  # Ensure that we don't try to use SSL on SSL Servers
+  <IfModule apache_ssl.c>
+    SSLDisable
+  </IfModule>
 </VirtualHost>
 
-<VirtualHost {ip_address}>
+<VirtualHost {ip_address}:80>
   ServerName {download_host}
   DocumentRoot /var/lib/gforge/download
   LogFormat "%h %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" gforge
   CustomLog "|/usr/sbin/cronolog /var/log/gforge/%Y/%m/%d/gforge.log" gforge
+  # Ensure that we don't try to use SSL on SSL Servers
+  <IfModule apache_ssl.c>
+    SSLDisable
+  </IfModule>
 </VirtualHost>
 
-<VirtualHost {ip_address}>
+<VirtualHost {ip_address}:80>
   ServerName {lists_host}
   AddHandler cgi-script .cgi
 
@@ -77,6 +89,10 @@ Include /etc/gforge/httpd.common
   RedirectMatch permanent ^/$ http://{lists_host}/cgi-bin/mailman/listinfo
   LogFormat "%h %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" gforge
   CustomLog "|/usr/sbin/cronolog /var/log/gforge/%Y/%m/%d/gforge.log" gforge
+  # Ensure that we don't try to use SSL on SSL Servers
+  <IfModule apache_ssl.c>
+    SSLDisable
+  </IfModule>
 </VirtualHost>
 
 <VirtualHost {ip_address}:443>
@@ -94,6 +110,10 @@ Include /etc/gforge/httpd.common
       SSLOptions +StdEnvVars
     </Directory>
     SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
+  </IfModule>
+
+  <IfModule apache_ssl.c>
+    SSLEnable
   </IfModule>
 
   ScriptAlias /mailman/ /usr/lib/mailman/cgi-bin/
@@ -138,12 +158,6 @@ Include /etc/gforge/httpd.common
 
   <IfModule apache_ssl.c>
     SSLEnable
-    <Files ~ "\.(cgi|shtml)$">
-      SSLOptions +StdEnvVars
-    </Files>
-    <Directory "/usr/lib/cgi-bin">
-      SSLOptions +StdEnvVars
-    </Directory>
     SetEnvIf User-Agent ".*MSIE.*" nokeepalive ssl-unclean-shutdown
   </IfModule>
 
@@ -164,7 +178,7 @@ Include /etc/gforge/httpd.common
 UseCanonicalName Off
 # This example is so beautiful that I keep it
 # And can be used in a better way e.g. creating a cvs directory by group
-<VirtualHost {ip_address}>
+<VirtualHost {ip_address}:80>
 	ServerName cvs.{domain_name}
 	ServerAlias cvs.*.{domain_name}
 	DocumentRoot /var/lib/gforge/chroot/home/groups/
@@ -180,6 +194,10 @@ UseCanonicalName Off
 	</Directory>
   LogFormat "%h %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" gforge
   CustomLog "|/usr/sbin/cronolog /var/log/gforge/%Y/%m/%d/gforge.log" gforge
+  # Ensure that we don't try to use SSL on SSL Servers
+  <IfModule apache_ssl.c>
+    SSLDisable
+  </IfModule>
 </VirtualHost>
 
 #This may be used 
@@ -187,7 +205,7 @@ UseCanonicalName Off
 #RewriteEngine On
 #RewriteRule ^(/sub1/.*) /www/subdomain$1
 
-<VirtualHost {ip_address}>
+<VirtualHost {ip_address}:80>
 	ServerName {domain_name}
 	ServerAlias *.{domain_name}
 	VirtualDocumentRoot /var/lib/gforge/chroot/home/groups/%1/htdocs
@@ -200,4 +218,8 @@ UseCanonicalName Off
        </Directory>
   LogFormat "%h %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" gforge
   CustomLog "|/usr/sbin/cronolog /var/log/gforge/%Y/%m/%d/gforge.log" gforge
+  # Ensure that we don't try to use SSL on SSL Servers
+  <IfModule apache_ssl.c>
+    SSLDisable
+  </IfModule>
 </VirtualHost>
