@@ -16,8 +16,11 @@ gforge (3pre8-0+) experimental; urgency=low
     and data checking is stricter.  The installation process should now
     work with both versions (provided the PostgreSQL server is installed
     correctly).
+  * [Roland] Applied patches #102 and #103 fixing stuff related with
+    Apache-SSL / Apache + mod_ssl.  Thanks, Julien Goodwin
+    <laptop006@users.gforge.org>.
 
- -- Roland Mas <lolando@debian.org>  Sun, 12 Jan 2003 20:00:05 +0100
+ -- Roland Mas <lolando@debian.org>  Wed, 15 Jan 2003 17:13:10 +0100
 
 gforge (3.0-0+8) experimental; urgency=low
 
